update lots of stuff

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -20,86 +20,104 @@ jobs:
       uses: actions/checkout@v3
 
     # Initial auth with minimal secrets
+    - name: 'Debug GitHub Context'
+      run: |
+        echo "=== GitHub Context Details ==="
+        echo "Repository: ${{ github.repository }}"
+        echo "Ref: ${{ github.ref }}"
+        echo "Event Name: ${{ github.event_name }}"
+        echo "Event Type: ${{ github.event.type }}"
+        echo "Actor: ${{ github.actor }}"
+        echo "Head Ref: ${{ github.head_ref }}"
+        echo "Base Ref: ${{ github.base_ref }}"
+        echo "Repository Owner: ${{ github.repository_owner }}"
+        echo "Repository Name: ${{ github.event.repository.name }}"
+        echo "Repository Full Name: ${{ github.event.repository.full_name }}"
+        echo "Default Branch: ${{ github.event.repository.default_branch }}"
+        echo ""
+        echo "=== Workload Identity Provider Format Check ==="
+        WORKLOAD_IDENTITY_PROVIDER="${{ secrets.INITIAL_WORKLOAD_IDENTITY_PROVIDER }}"
+        if [[ -z "$WORKLOAD_IDENTITY_PROVIDER" ]]; then
+          echo "Error: INITIAL_WORKLOAD_IDENTITY_PROVIDER secret is not set"
+          exit 1
+        fi
+        echo "Provider Format: $WORKLOAD_IDENTITY_PROVIDER"
+        if [[ "$WORKLOAD_IDENTITY_PROVIDER" =~ ^projects/[0-9]+/locations/[^/]+/workloadIdentityPools/[^/]+/providers/[^/]+$ ]]; then
+          echo "✓ Provider format is correct"
+        else
+          echo "✗ Provider format is incorrect"
+          echo "Expected format: projects/{PROJECT_NUMBER}/locations/{LOCATION}/workloadIdentityPools/{POOL_ID}/providers/{PROVIDER_ID}"
+          exit 1
+        fi
+
     - name: 'Initial Auth to GCP'
       uses: 'google-github-actions/auth@v1'
       with:
         workload_identity_provider: '${{ secrets.INITIAL_WORKLOAD_IDENTITY_PROVIDER }}'
         service_account: '${{ secrets.INITIAL_SERVICE_ACCOUNT }}'
         token_format: 'access_token'
+        create_credentials_file: true
 
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
 
-    - name: 'Debug Workload Identity Configuration'
+    - name: 'Verify Authentication'
       run: |
-        echo "=== GitHub Context ==="
-        echo "Repository: ${{ github.repository }}"
-        echo "Ref: ${{ github.ref }}"
-        echo "Event: ${{ github.event_name }}"
-        echo "Actor: ${{ github.actor }}"
-        echo "Head Ref: ${{ github.head_ref }}"
-        echo "Base Ref: ${{ github.base_ref }}"
-        echo "Event Type: ${{ github.event.type }}"
-        echo ""
-        echo "=== Workload Identity Provider ==="
-        WORKLOAD_IDENTITY_PROVIDER="${{ secrets.INITIAL_WORKLOAD_IDENTITY_PROVIDER }}"
-        echo "Provider: $WORKLOAD_IDENTITY_PROVIDER"
-        echo ""
-        echo "=== Service Account ==="
-        echo "Service Account: ${{ secrets.INITIAL_SERVICE_ACCOUNT }}"
-        echo ""
-        echo "=== Current Authentication ==="
+        echo "=== Authentication Status ==="
         gcloud auth list
         echo ""
         echo "=== Current Configuration ==="
         gcloud config list
-
-    - name: 'Verify Initial Workload Identity'
-      run: |
-        echo "Attempting to verify workload identity provider..."
+        echo ""
+        echo "=== Service Account Info ==="
+        echo "Service Account: ${{ secrets.INITIAL_SERVICE_ACCOUNT }}"
+        echo ""
+        echo "=== Workload Identity Provider Info ==="
         WORKLOAD_IDENTITY_PROVIDER="${{ secrets.INITIAL_WORKLOAD_IDENTITY_PROVIDER }}"
-        if [[ -z "$WORKLOAD_IDENTITY_PROVIDER" ]]; then
-          echo "Error: INITIAL_WORKLOAD_IDENTITY_PROVIDER secret is not set"
-          exit 1
-        fi
-        echo "Workload Identity Provider format check:"
-        if [[ "$WORKLOAD_IDENTITY_PROVIDER" =~ ^projects/[0-9]+/locations/[^/]+/workloadIdentityPools/[^/]+/providers/[^/]+$ ]]; then
-          echo "✓ Format is correct"
-        else
-          echo "✗ Format is incorrect. Expected format: projects/{PROJECT_NUMBER}/locations/{LOCATION}/workloadIdentityPools/{POOL_ID}/providers/{PROVIDER_ID}"
-          echo "Current value: $WORKLOAD_IDENTITY_PROVIDER"
-          exit 1
-        fi
-
-        # Extract project ID from the workload identity provider
         PROJECT_ID=$(echo "$WORKLOAD_IDENTITY_PROVIDER" | cut -d'/' -f2)
-        echo "Checking IAM permissions for project: $PROJECT_ID"
+        LOCATION=$(echo "$WORKLOAD_IDENTITY_PROVIDER" | cut -d'/' -f4)
+        POOL_ID=$(echo "$WORKLOAD_IDENTITY_PROVIDER" | cut -d'/' -f6)
+        PROVIDER_ID=$(echo "$WORKLOAD_IDENTITY_PROVIDER" | cut -d'/' -f8)
         
-        # Check if we have the necessary permissions
-        echo "Verifying IAM permissions..."
-        if ! gcloud projects get-iam-policy "$PROJECT_ID" --flatten="bindings[].members" --format="table(bindings.role,bindings.members)" | grep -E "roles/iam.workloadIdentityPoolAdmin|roles/iam.workloadIdentityPoolViewer|roles/iam.admin"; then
-          echo "Warning: Current account may not have sufficient permissions to view workload identity pools"
-          echo "Required roles: roles/iam.workloadIdentityPoolAdmin, roles/iam.workloadIdentityPoolViewer, or roles/iam.admin"
-          echo "Please ensure your account has one of these roles assigned"
-        fi
-
-        echo "Attempting to describe workload identity pool..."
-        if ! gcloud iam workload-identity-pools describe "$WORKLOAD_IDENTITY_PROVIDER" --format="table(name,resourceName)"; then
-          echo "Error: Failed to describe workload identity pool. This could be due to:"
-          echo "1. Insufficient permissions on your Google Cloud account"
-          echo "2. Workload identity pool doesn't exist"
-          echo "3. The service account doesn't have the roles/iam.workloadIdentityUser role"
-          echo ""
-          echo "To fix this:"
-          echo "1. Ensure you're using the correct Google Cloud account"
-          echo "2. Verify you have one of these roles: roles/iam.workloadIdentityPoolAdmin, roles/iam.workloadIdentityPoolViewer, or roles/iam.admin"
-          echo "3. Check that the workload identity pool exists in the specified project"
-          echo ""
-          echo "Current authentication status:"
-          gcloud auth list
-          echo "Current configuration:"
-          gcloud config list
+        echo "Project ID: $PROJECT_ID"
+        echo "Location: $LOCATION"
+        echo "Pool ID: $POOL_ID"
+        echo "Provider ID: $PROVIDER_ID"
+        echo "Full Provider: $WORKLOAD_IDENTITY_PROVIDER"
+        echo ""
+        echo "=== Verifying Workload Identity Pool ==="
+        if ! gcloud iam workload-identity-pools describe "$POOL_ID" \
+          --project="$PROJECT_ID" \
+          --location="$LOCATION" \
+          --format="table(name,resourceName)"; then
+          echo "Error: Failed to describe workload identity pool"
+          echo "This could mean:"
+          echo "1. The pool doesn't exist"
+          echo "2. You don't have permission to view it"
+          echo "3. The project/location/pool ID is incorrect"
           exit 1
+        fi
+        echo ""
+        echo "=== Verifying Workload Identity Provider ==="
+        if ! gcloud iam workload-identity-pools providers describe "$PROVIDER_ID" \
+          --project="$PROJECT_ID" \
+          --location="$LOCATION" \
+          --workload-identity-pool="$POOL_ID" \
+          --format="table(name,resourceName,attributeCondition)"; then
+          echo "Error: Failed to describe workload identity provider"
+          echo "This could mean:"
+          echo "1. The provider doesn't exist"
+          echo "2. You don't have permission to view it"
+          echo "3. The project/location/pool/provider IDs are incorrect"
+          exit 1
+        fi
+        echo ""
+        echo "=== Verifying Service Account Permissions ==="
+        if ! gcloud projects get-iam-policy "$PROJECT_ID" \
+          --flatten="bindings[].members" \
+          --format="table(bindings.role,bindings.members)" | grep "${{ secrets.INITIAL_SERVICE_ACCOUNT }}"; then
+          echo "Warning: Service account ${{ secrets.INITIAL_SERVICE_ACCOUNT }} not found in project IAM policy"
+          echo "Make sure the service account has the roles/iam.workloadIdentityUser role"
         fi
 
     # Fetch secrets from Secret Manager
