--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -187,15 +187,23 @@ jobs:
       uses: hashicorp/setup-terraform@v2
 
     - name: 'Terraform Init'
-      run: terraform init
+      run: |
+        cd terraform-test
+        terraform init
 
     - name: 'Terraform Format'
-      run: terraform fmt -check
+      run: |
+        cd terraform-test
+        terraform fmt -check
 
     - name: 'Terraform Plan'
-      run: terraform plan
+      run: |
+        cd terraform-test
+        terraform plan
 
     # Uncomment if you want to allow terraform apply on main branch
     # - name: 'Terraform Apply'
     #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    #   run: terraform apply -auto-approve
+    #   run: |
+    #     cd terraform-test
+    #     terraform apply -auto-approve
