--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -194,6 +194,7 @@ jobs:
     - name: 'Terraform Format'
       run: |
         cd terraform-test
+        terraform fmt
         terraform fmt -check
 
     - name: 'Terraform Plan'
