--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -57,6 +57,7 @@ jobs:
         service_account: '${{ secrets.INITIAL_SERVICE_ACCOUNT }}'
         token_format: 'access_token'
         create_credentials_file: true
+        project_id: 'sylvan-apogee-450014-a6'  # Add explicit project_id
 
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
@@ -122,69 +123,6 @@ jobs:
           echo "Warning: Service account ${{ secrets.INITIAL_SERVICE_ACCOUNT }} not found in project IAM policy"
           echo "Make sure the service account has the roles/iam.workloadIdentityUser role"
         fi
-
-    # Fetch secrets from Secret Manager
-    - name: 'Fetch GCP Secrets'
-      id: secrets
-      run: |
-        # Function to safely get secret
-        get_secret() {
-          local secret_name=$1
-          local secret_value
-          secret_value=$(gcloud secrets versions access latest --secret="$secret_name" --project="${{ steps.secrets.outputs.project_id }}" 2>/dev/null || echo "")
-          if [[ -n "$secret_value" ]]; then
-            echo "$secret_value"
-          else
-            echo "Warning: Secret $secret_name not found or not accessible"
-            echo ""
-          fi
-        }
-
-        # Get secrets and set them as outputs
-        WORKLOAD_IDENTITY_PROVIDER=$(get_secret "github_workload_identity_provider")
-        SERVICE_ACCOUNT=$(get_secret "github_service_account")
-        PROJECT_ID=$(get_secret "project_id")
-
-        # Set outputs
-        echo "workload_identity_provider=${WORKLOAD_IDENTITY_PROVIDER}" >> $GITHUB_OUTPUT
-        echo "service_account=${SERVICE_ACCOUNT}" >> $GITHUB_OUTPUT
-        echo "project_id=${PROJECT_ID}" >> $GITHUB_OUTPUT
-
-        # Verify required secrets
-        if [[ -z "$WORKLOAD_IDENTITY_PROVIDER" ]] || [[ -z "$SERVICE_ACCOUNT" ]] || [[ -z "$PROJECT_ID" ]]; then
-          echo "Error: Required secrets are missing. Please ensure all secrets are created in Secret Manager."
-          exit 1
-        fi
-
-    # Re-authenticate with fetched credentials
-    - name: 'Re-Auth to GCP with Secret Manager values'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        workload_identity_provider: '${{ steps.secrets.outputs.workload_identity_provider }}'
-        service_account: '${{ steps.secrets.outputs.service_account }}'
-
-    - name: 'Test Secret Manager Access'
-      run: |
-        echo "Testing Secret Manager Access..."
-        echo "Current project configuration:"
-        gcloud config list project
-        
-        # Ensure project is set correctly
-        gcloud config set project ${{ steps.secrets.outputs.project_id }}
-        
-        echo "Listing secrets..."
-        gcloud secrets list --project=${{ steps.secrets.outputs.project_id }} --format="table(name,createTime)"
-        
-        # Test access to specific secrets
-        echo "Testing access to specific secrets..."
-        for secret in "github_workload_identity_provider" "github_service_account" "project_id"; do
-          echo "Testing access to $secret..."
-          if gcloud secrets versions access latest --secret="$secret" --project=${{ steps.secrets.outputs.project_id }} 2>/dev/null; then
-            echo "✓ Successfully accessed $secret"
-          else
-            echo "✗ Failed to access $secret"
-          fi
-        done
 
     - name: 'Setup Terraform'
       uses: hashicorp/setup-terraform@v2
