--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -142,10 +142,16 @@ jobs:
     - name: 'Terraform Plan'
       run: |
         cd terraform-test
-        terraform plan
+        terraform plan \
+          -var="support_email=${{ secrets.SUPPORT_EMAIL }}" \
+          -var="iap_authorized_users=[\"user:${{ secrets.AUTHORIZED_USER }}\"]" \
+          -var="github_repo=${{ github.repository }}"
 
     - name: 'Terraform Apply'
-      if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
+      if: github.event.pull_request.merged == true
       run: |
         cd terraform-test
-        terraform apply -auto-approve
+        terraform apply -auto-approve \
+          -var="support_email=${{ secrets.SUPPORT_EMAIL }}" \
+          -var="iap_authorized_users=[\"user:${{ secrets.AUTHORIZED_USER }}\"]" \
+          -var="github_repo=${{ github.repository }}"
